# ChangeLog for virtual/ruby-test-unit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-test-unit/ChangeLog,v 1.7 2010/01/11 11:14:38 ulm Exp $

  11 Jan 2010; Ulrich Mueller <ulm@gentoo.org> ruby-test-unit-0.ebuild:
  Set empty HOMEPAGE and LICENSE.

  06 Jan 2010; Alex Legler <a3li@gentoo.org> ruby-test-unit-0.ebuild:
  Fix HOMEPAGE

  21 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-test-unit-0.ebuild:
  Restore keywords now that test-unit-2 is masked.

  16 Dec 2009; Jeroen Roovers <jer@gentoo.org> ruby-test-unit-0.ebuild:
  Marked ~hppa (bug #297046).

  15 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  ruby-test-unit-0.ebuild:
  Restore keywords with the new test-unit.

  07 Dec 2009; Alex Legler <a3li@gentoo.org> ruby-test-unit-0.ebuild:
  s/gentoo_rubylib/ruby_targets/g, thanks mr.bones

*ruby-test-unit-0 (06 Dec 2009)

  06 Dec 2009; Hans de Graaff <graaff@gentoo.org> +ruby-test-unit-0.ebuild,
  +metadata.xml:
  Initial import from ruby-ng-testbed. Required for forthcoming
  ruby-fakegem.eclass.
